# Cortana

./: .gitignore  AI_SETUP.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  Launcher.bat  README.md  README_DMCE_UPDATE.md  credential_handler.js  dmce_automation_report.md  dmce_env_example.js  dmce_final_report.md  dmce_full_process_automation.js  docker-compose.yml  error_page.html  evidence.json  invoice_url_analysis.txt  invoice_url_exploration_report.txt  package-lock.json  package.json  todo.txt  updated_stealth_login.js
backend/: Dockerfile  README.md  fly.toml  netlify.toml  pyproject.toml  render.yaml  requirements.txt  start_backend_for_testing.sh  test_api_auth_fixed.py  test_dmce_headless.py  test_dmce_manual_login.py  test_dmce_secure_handler.py  test_dmce_visual.py  test_traffic_api.sh
backend/app/: main.py
backend/app/accounting/: audit.py  dependencies.py  document_generator.py  email_drafts.py  exports.py  models.py  obligation_scraper.py  reminder.py  routers.py  scheduler.py  schemas.py  services.py  services_additions.py  storage_check.py  utils.py
backend/app/ai/: __init__.py  contract_intelligence.py
backend/app/auth/: token.py
backend/app/compliance/: tasks.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/data/: diagnostics_log.json  list_updates_db.pickle
backend/app/db/: __init__.py  base.py  in_memory.py  init_db.py
backend/app/legal/: __init__.py  models.py  routers.py  schemas.py  (+1 more)
backend/data/: MATRIZ_JURIDICA_GRUPO_MAGNATE_ABIERTA.xlsx
backend/tests/: test_compliance_integration.py  test_diagnostics.py
(+416 files in other folders)
