[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.6"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = ">=0.0.18"
pydantic = {extras = ["email"], version = "^2.7.1"}
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
jinja2 = "^3.1.3"
aiosmtplib = "^3.0.1"
pydantic-settings = "^2.9.1"
mangum = "^0.17.0"

# AI and NLP dependencies
spacy = "^3.7.2"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
faiss-cpu = "^1.7.4"
nltk = "^3.8.1"
pdfplumber = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
